@@ -467,6 +467,8 @@ void buildSpellArray()
 
   discArray[SKILL_STAVECHARGE] = new spellInfo(SKILL_MAGE, DISC_ALCHEMY, DISC_ALCHEMY, STAT_EXT, "charge stave", TASK_EASY, LAG_0, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_1, LEARN_1, START_DO_20, LEARN_DO_2, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_SPELLS, 0.0, 0, 0);
 
+  discArray[SPELL_ETHER_GATE] = new spellInfo(SPELL_MAGE, DISC_ALCHEMY, DISC_ALCHEMY, STAT_EXT, "ethereal gate", TASK_EASY, LAG_3, POSITION_SITTING, MANA_50, LIFEFORCE_0, PRAY_0, TAR_NAME, SYMBOL_STRESS_0, "", "", "", "", START_80, LEARN_5, START_DO_35, LEARN_DO_5, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_SPELLS, 0.04, COMP_GESTURAL | COMP_VERBAL | SPELL_TASKED, 0);
+
 // disc_earth
 
   discArray[SPELL_METEOR_SWARM] = new spellInfo(SPELL_MAGE, DISC_EARTH, DISC_EARTH, STAT_INT, "meteor swarm", TASK_NORMAL, LAG_3, POSITION_SITTING, MANA_40, LIFEFORCE_0, PRAY_0, TAR_CHAR_ROOM | TAR_SELF_NONO | TAR_VIOLENT | TAR_FIGHT_VICT , SYMBOL_STRESS_0, "", "", "", "", START_50, LEARN_5, START_DO_50, LEARN_DO_5, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_SPELLS, 0.08, COMP_GESTURAL | COMP_GESTURAL_RANDOM | COMP_VERBAL | COMP_VERBAL_RANDOM | COMP_MATERIAL | COMP_MATERIAL_END | SPELL_TASKED, 0);
@@ -524,6 +526,7 @@ void buildSpellArray()
   discArray[SPELL_PLASMA_MIRROR] = new spellInfo(SPELL_MAGE, DISC_WATER, DISC_WATER, STAT_INT, "plasma mirror", TASK_EASY, LAG_3, POSITION_CRAWLING, MANA_50, LIFEFORCE_0, PRAY_0, TAR_SELF_ONLY | TAR_FIGHT_SELF | TAR_CHAR_ROOM, SYMBOL_STRESS_0, "The swirls of plasma about you disperse.", "The swirls of plasma about $n disperse.", "The plasma about you swirls more slowly now.", "", START_30, LEARN_4, START_DO_45, LEARN_DO_2, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_SPELLS, 0.02, COMP_GESTURAL | COMP_GESTURAL_RANDOM | COMP_VERBAL | COMP_VERBAL_RANDOM | COMP_MATERIAL | COMP_MATERIAL_END | SPELL_TASKED, 0);
 
   discArray[SPELL_GARMULS_TAIL] = new spellInfo(SPELL_MAGE, DISC_WATER, DISC_WATER, STAT_EXT, "Garmul's tail", TASK_NORMAL, LAG_3, POSITION_CRAWLING, MANA_20, LIFEFORCE_0, PRAY_0, TAR_FIGHT_SELF | TAR_CHAR_ROOM, SYMBOL_STRESS_0, "You cease to move with fluid motion.", "$n ceases to move with fluid motion.", "Your movement is becoming less fluid.", "", START_5, LEARN_4, START_DO_45, LEARN_DO_2, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_SPELLS, 0.02, COMP_GESTURAL | COMP_GESTURAL_RANDOM | COMP_VERBAL | COMP_VERBAL_RANDOM | COMP_MATERIAL | COMP_MATERIAL_END | SPELL_TASKED, 0);
+
 
 
 // CLERIC CLASS
