@@ -1,3 +1,10 @@
+03-12-21 : Travel updates
+           - Portal should never close leaving a mount behind now
+           - Cleric portals now have the same number of uses on each side
+           - New Skill: The illithid wizard now teaches his desciples a bit
+             of his knowledge of dimensional manipulation. 
+           - New Skill: Ethereal Gate is now available to advanced alchemists
+
 01-05-21 : List characters in the account menu now shows the race and 
              classes of each of the characters.
 
